# fast-django

./: .dockerignore  .gitignore  Makefile  docker-compose.dev.yaml  docker-compose.override.yaml  docker-compose.prod.yaml  docker-compose.yaml
backend/: .flake8  Dockerfile  Makefile  conftest.py  pyproject.toml
backend/config/: __init__.py  settings.py  wsgi.py
backend/config_celery/: __init__.py  app.py
backend/config_fastapi/: __init__.py  app.py
backend/config_socketio/: __init__.py  app.py
backend/src/: __init__.py
backend/src/authentication/: __init__.py  admin.py  api_errors.py  apps.py  containers.py  dependencies.py  endpoints.py  entities.py  models.py
backend/src/authentication/migrations/: 0001_initial.py
backend/src/authentication/repositories/: __init__.py  captcha_repository.py  password_token_repository.py
backend/src/authentication/schemas/: __init__.py  auth.py  captchas.py  change_password.py  registration.py  tokens.py
backend/src/authentication/services/: __init__.py  auth_service.py  captcha_service.py  jwt_service.py  password_service.py
backend/src/authentication/tests/: __init__.py  test_captcha.py  test_change_password.py  test_login.py  test_new_password_confirm.py  test_new_password_request.py  test_refresh.py  test_register.py
backend/src/core/: __init__.py  admin.py  apps.py  caches_builders.py  caches_keys.py  containers.py  registry.py
backend/src/core/management/commands/: generate.py  init_project.py  init_project_async.py  parse.py
backend/src/core/schemas/: __init__.py  caches.py
backend/src/core/services/: __init__.py  image.py
backend/src/users/: __init__.py  admin.py  api_errors.py  apps.py  containers.py  enums.py  models.py
backend/src/users/endpoints/: __init__.py  profile.py
backend/src/users/migrations/: 0001_initial.py
backend/src/users/repositories/: __init__.py  user.py
backend/src/users/schemas/: __init__.py  profile.py  user.py
backend/src/users/services/: __init__.py  user.py
backend/src/users/tests/: __init__.py
backend/utils/: __init__.py
backend/utils/logger/: __init__.py  logger.py  logger_telegram.py
backend/utils/models/: __init__.py  magic_image.py
backend/utils/rate_limiter/: __init__.py  rate_limiter.py
backend/utils/redis/: __init__.py  dependency.py  lifetime.py
backend/utils/repositories/: __init__.py  base.py
backend/utils/responses/: __init__.py  examples_generator.py
backend/utils/responses/http/: __init__.py  api.py  auth.py  base.py  success.py
backend/utils/schemas/: __init__.py  base.py  pagination.py
backend/utils/security/: __init__.py  base.py  dependencies.py
backend/utils/services/: __init__.py  base.py
deploy/: sample.env
deploy/nginx/: dev.nginx.conf  local.nginx.conf  prod.nginx.conf
deploy/postgres/: Dockerfile
fast_django/: .pre-commit-config.yaml  Makefile  conftest.py  pyproject.toml
fast_django/config/: asgi.py  settings.py  urls.py
fast_django/src/video_tags/: apps.py  dependencies.py  endpoints.py  manager.py  models.py
fast_django/src/video_tags/migrations/: 0001_initial.py
fast_django/src/video_tags/tests/: __init__.py  test_create_tag.py
